--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,9 +23,9 @@
       <h2>LOGAR</h2>
 
       <div class="social-icons">
-        <a href="#"><img src="./assets/icons/facebook.png" alt="Facebook" /></a>
-        <a href="#"><img src="./assets/icons/google.png" alt="Google" /></a>
-        <a href="#"><img src="./assets/icons/github.png" alt="GitHub" /></a>
+        <a href="#"><img src="./assets/facebook.png" alt="Facebook" /></a>
+        <a href="#"><img src="./assets/google.png" alt="Google" /></a>
+        <a href="#"><img src="./assets/github.png" alt="GitHub" /></a>
       </div>
 
       <form action="select.html" method="GET">
