--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,9 +12,9 @@
   <div class="container" id="container">
     <!-- Lado Esquerdo (Login/Texto) -->
     <div class="left-panel">
-      <h1>CONNECT BENTÃO</h1>
+      <h1>TERMO</h1>
       <a href="index.html">
-        <button id="goToLogin">Sign Up</button>
+        <button id="goToLogin">Cadastrar</button>
       </a>
     </div>
 
