--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <div class="container" id="container">
     <!-- Lado Esquerdo (Login/Texto) -->
     <div class="left-panel">
-      <h1>CONNECT BENTÃO</h1>
+      <h1>TERMO</h1>
       <a href="login.html">
         <button id="goToLogin">Login</button>
       </a>
