--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,41 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" />
-  <title>Bentão Connect</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
-<body class="pagina-login">
-  <div class="container" id="container">
-    <!-- Lado Esquerdo (Login/Texto) -->
-    <div class="left-panel">
-      <h1>TERMO</h1>
-      <a href="index.html">
-        <button id="goToLogin">Cadastrar</button>
-      </a>
-    </div>
-
-    <!-- Lado Direito (Formulário de cadastro) -->
-    <div class="right-panel">
-      <h2>LOGAR</h2>
-
-      <div class="social-icons">
-        <a href="#"><img src="./assets/facebook.png" alt="Facebook" /></a>
-        <a href="#"><img src="./assets/google.png" alt="Google" /></a>
-        <a href="#"><img src="./assets/github.png" alt="GitHub" /></a>
-      </div>
-
-      <form action="select.html" method="GET">
-        <input type="text" placeholder="Nome" />
-        <input type="password" placeholder="Senha" />
-        <button type="submit" class="btn-primary">ENTRAR</button>
-      </form>
-    </div>
-  </div>
-  <script src="dinamico.js"></script>
+<body>
+    
 </body>
-
 </html>
