--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Adote um Amigo 🐾</h1>
+        <img src="./assets/Logo.png" alt="Logo" id="logo" />
     </header>
 
     <main>
