icone da pagina

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adote um Amigo 🐾</title>
+    <title>Termo's Pet</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon.ico" type="image/x-icon">
 </head>
 
 <body>
