--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Document</title>
+        <link rel="shortcut icon" href="./assets/icon.ico" type="image/x-icon">
+        <title>Termo's Pet</title>
     </head>
     <body>
         <header>
