--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
       <div id="galeria-geral"></div>
     </section>
     <aside id="info">
-      <h2 id="user"></h2>
+      <h2 id="user"> usuario</h2>
       <p>Bem-vindo ao Termo's Pet, um sistema dedicado a conectar animais que precisam de um lar amoroso com pessoas dispostas a adotá-los. Nosso objetivo é facilitar o processo de adoção, promovendo o bem-estar animal e ajudando a encontrar lares permanentes para nossos amigos de quatro patas.</p>
       <p>Navegue pela nossa galeria de animais disponíveis para adoção. Cada animal possui uma ficha detalhada com informações sobre sua personalidade, necessidades especiais e fotos adoráveis. Se você encontrar um companheiro que toque seu coração, entre em contato conosco para iniciar o processo de adoção.</p>
       <p>Agradecemos seu interesse em adotar e contribuir para uma causa tão nobre. Juntos, podemos fazer a diferença na vida desses animais!</p>
